# obs

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  lefthook.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  release.yml
src/obs/: __init__.py  logging.py  sentry.py
tests/: test_logging.py  test_sentry.py
