[project]
name = "obs"
version = "0.1.0"
description = "Shared observability for ~/dev/homework — structlog logging + Sentry."
requires-python = ">=3.11"
dependencies = [
    "structlog>=24.1.0",
    "sentry-sdk>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/obs"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.0",
    "ty>=0.0.23",
]

# Tooling per CONVENTIONS.md › Python standards (see snippets/pyproject.toml).
[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "N", "C90"]

# structlog's ProcessorFormatter typing declares MutableMapping where our processors
# use dict — a known stub edge, not a real bug. Scope the ignore to the one file.
[[tool.ty.overrides]]
include = ["src/obs/logging.py"]
rules = { invalid-argument-type = "ignore" }

[tool.pytest.ini_options]
addopts = "-q"
