[project]
name = "obs"
version = "0.2.1"
description = "Shared observability — structlog logging + Sentry."
requires-python = ">=3.11"
dependencies = [
    "structlog>=24.1.0",
    "sentry-sdk>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/obs"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.15.0",
    "ty==0.0.46",   # pre-1.0, churns; pin and bump deliberately (per conventions)
]

# Tooling: ruff (lint + format), ty (type check), pytest.
[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "N", "C90"]

# structlog's ProcessorFormatter typing declares MutableMapping where our processors
# use dict — a known stub edge, not a real bug. Scope the ignore to the one file.
[[tool.ty.overrides]]
include = ["src/obs/logging.py"]
rules = { invalid-argument-type = "ignore" }

[tool.pytest.ini_options]
# Coverage floor (per conventions): start below current (96%) and ratchet up over time.
addopts = "-q --cov=obs --cov-report=term-missing --cov-fail-under=90"

# Automated releases — python-semantic-release drives version + tag + CHANGELOG +
# GitHub Release from conventional commits on merge to main (see .github/workflows/release.yml).
# obs is git-installed (no PyPI), so no build/publish artifacts.
[tool.semantic_release]
commit_parser = "conventional"
version_toml = ["pyproject.toml:project.version"]
build_command = ""
tag_format = "v{version}"
allow_zero_version = true
major_on_zero = false   # pre-1.0: breaking changes bump minor, not major

[tool.semantic_release.changelog]
mode = "update"   # insert into CHANGELOG.md, preserving any manual edits
exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''build(?:\([^)]*?\))?: .+''',
    '''refactor(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
]

[tool.semantic_release.branches.main]
match = "main"
